# pw-hhkb

./: .gitignore  CMakeEnv.cmake.example  CMakeLists.txt  CMake_nRF5x.cmake  app_config.h  gcc_nrf51.ld  gcc_nrf52.ld  gcc_nrf52_xxaa.ld  main.c  sdk_config.h
src/: config.h  example.c  hhkb.c  main.c  main.h  matrix.c  matrix.h  util.c  util.h
src/keyboard/: keyboard.c  keyboard.h  matrix.c  matrix.h
src/service/: advertising.c  advertising.h  battery.c  battery.h  ble.c  ble.h  connection.c  connection.h  device.c  device.h  hid.c  hid.h  peer_manager.c  peer_manager.h
src/util/: buffer.c  buffer.h  error.c  error.h  logger.c  logger.h  util.c  util.h
